--- a/front/birth.html
+++ b/front/birth.html
@@ -28,7 +28,7 @@
             <p>나이: 7세</p>
         </div>
         <div class="subment">
-            학교에 다녀온 <span class="name">엄쪽이</span>(이)와<br>대화를 나눠보세요!
+            학교에 다녀온 <span class="cname">엄쪽이</span>(이)와<br>대화를 나눠보세요!
         </div>
     </div>
     <button class="button" type="button" onclick="select()">
